PL/PracticaFinal/final.output
Terminales no usados en gramática

   INDEFINIDA
   INICIO
   FIN
   REPETIR
   HASTA_QUE
   PARA
   DESDE
   HASTA
   PASO
   FIN_PARA


Estado 45 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: list $end

    1 list: %empty
    2     | list stmt ';'
    3     | list error ';'

    4 stmt: %empty
    5     | asgn
    6     | TOKEN_BORRAR
    7     | TOKEN_LUGAR '(' expr ',' expr ')'
    8     | ESCRIBIR '(' expr ')'
    9     | LEER '(' VAR ')'
   10     | ESCRIBIR_CADENA '(' CADENA ')'
   11     | ESCRIBIR_CADENA '(' expr ')'
   12     | LEER_CADENA '(' VAR ')'
   13     | mientras cond HACER stmtlist FIN_MIENTRAS end
   14     | si cond ENTONCES stmtlist FIN_SI end
   15     | si cond ENTONCES stmtlist end SI_NO stmtlist FIN_SI end

   16 asgn: VAR ASIGNACION expr
   17     | CONSTANTE ASIGNACION expr

   18 cond: '(' expr ')'

   19 mientras: MIENTRAS

   20 si: SI

   21 end: %empty

   22 stmtlist: %empty
   23         | stmtlist stmt ';'

   24 expr: NUMBER
   25     | CADENA
   26     | VAR
   27     | CONSTANTE
   28     | asgn
   29     | FUNCION0_PREDEFINIDA '(' ')'
   30     | FUNCION1_PREDEFINIDA '(' expr ')'
   31     | FUNCION2_PREDEFINIDA '(' expr ',' expr ')'
   32     | '(' expr ')'
   33     | '-' expr
   34     | '+' expr
   35     | expr SUMA expr
   36     | expr RESTA expr
   37     | expr PROD expr
   38     | expr DIV expr
   39     | expr DIV_INT expr
   40     | expr MOD expr
   41     | expr POT expr
   42     | expr MAYOR_QUE expr
   43     | expr MAYOR_IGUAL expr
   44     | expr MENOR_QUE expr
   45     | expr MENOR_IGUAL expr
   46     | expr IGUAL expr
   47     | expr DISTINTO expr
   48     | NO_LOGICO expr
   49     | expr Y_LOGICO expr
   50     | expr O_LOGICO expr
   51     | expr CONCAT expr


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 7 8 9 10 11 12 18 29 30 31 32
')' (41) 7 8 9 10 11 12 18 29 30 31 32
'+' (43) 34
',' (44) 7 31
'-' (45) 33
';' (59) 2 3 23
error (256) 3
NUMBER (258) 24
VAR (259) 9 12 16 26
CONSTANTE (260) 17 27
CADENA (261) 10 25
FUNCION0_PREDEFINIDA (262) 29
FUNCION1_PREDEFINIDA (263) 30
FUNCION2_PREDEFINIDA (264) 31
INDEFINIDA (265)
ESCRIBIR (266) 8
ESCRIBIR_CADENA (267) 10 11
MIENTRAS (268) 19
SI (269) 20
ENTONCES (270) 14 15
SI_NO (271) 15
FIN_SI (272) 14 15
LEER (273) 9
LEER_CADENA (274) 12
TOKEN_BORRAR (275) 6
TOKEN_LUGAR (276) 7
INICIO (277)
FIN (278)
HACER (279) 13
FIN_MIENTRAS (280) 13
REPETIR (281)
HASTA_QUE (282)
PARA (283)
DESDE (284)
HASTA (285)
PASO (286)
FIN_PARA (287)
ASIGNACION (288) 16 17
O_LOGICO (289) 50
Y_LOGICO (290) 49
MAYOR_QUE (291) 42
MENOR_QUE (292) 44
MENOR_IGUAL (293) 45
MAYOR_IGUAL (294) 43
DISTINTO (295) 47
IGUAL (296) 46
SUMA (297) 35
RESTA (298) 36
PROD (299) 37
DIV (300) 38
DIV_INT (301) 39
MOD (302) 40
UNARIO (303)
NO_LOGICO (304) 48
POT (305) 41
CONCAT (306) 51


No terminales con las reglas donde aparecen

$accept (58)
    en la izquierda: 0
list (59)
    en la izquierda: 1 2 3, en la derecha: 0 2 3
stmt (60)
    en la izquierda: 4 5 6 7 8 9 10 11 12 13 14 15, en la derecha:
    2 23
asgn (61)
    en la izquierda: 16 17, en la derecha: 5 28
cond (62)
    en la izquierda: 18, en la derecha: 13 14 15
mientras (63)
    en la izquierda: 19, en la derecha: 13
si (64)
    en la izquierda: 20, en la derecha: 14 15
end (65)
    en la izquierda: 21, en la derecha: 13 14 15
stmtlist (66)
    en la izquierda: 22 23, en la derecha: 13 14 15 23
expr (67)
    en la izquierda: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45 46 47 48 49 50 51, en la derecha: 7 8 11 16 17
    18 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51


State 0

    0 $accept: . list $end

    $default  reduce usando la regla 1 (list)

    list  ir al estado 1


State 1

    0 $accept: list . $end
    2 list: list . stmt ';'
    3     | list . error ';'

    $end             desplazar e ir al estado 2
    error            desplazar e ir al estado 3
    VAR              desplazar e ir al estado 4
    CONSTANTE        desplazar e ir al estado 5
    ESCRIBIR         desplazar e ir al estado 6
    ESCRIBIR_CADENA  desplazar e ir al estado 7
    MIENTRAS         desplazar e ir al estado 8
    SI               desplazar e ir al estado 9
    LEER             desplazar e ir al estado 10
    LEER_CADENA      desplazar e ir al estado 11
    TOKEN_BORRAR     desplazar e ir al estado 12
    TOKEN_LUGAR      desplazar e ir al estado 13

    ';'  reduce usando la regla 4 (stmt)

    stmt      ir al estado 14
    asgn      ir al estado 15
    mientras  ir al estado 16
    si        ir al estado 17


State 2

    0 $accept: list $end .

    $default  aceptar


State 3

    3 list: list error . ';'

    ';'  desplazar e ir al estado 18


State 4

   16 asgn: VAR . ASIGNACION expr

    ASIGNACION  desplazar e ir al estado 19


State 5

   17 asgn: CONSTANTE . ASIGNACION expr

    ASIGNACION  desplazar e ir al estado 20


State 6

    8 stmt: ESCRIBIR . '(' expr ')'

    '('  desplazar e ir al estado 21


State 7

   10 stmt: ESCRIBIR_CADENA . '(' CADENA ')'
   11     | ESCRIBIR_CADENA . '(' expr ')'

    '('  desplazar e ir al estado 22


State 8

   19 mientras: MIENTRAS .

    $default  reduce usando la regla 19 (mientras)


State 9

   20 si: SI .

    $default  reduce usando la regla 20 (si)


State 10

    9 stmt: LEER . '(' VAR ')'

    '('  desplazar e ir al estado 23


State 11

   12 stmt: LEER_CADENA . '(' VAR ')'

    '('  desplazar e ir al estado 24


State 12

    6 stmt: TOKEN_BORRAR .

    $default  reduce usando la regla 6 (stmt)


State 13

    7 stmt: TOKEN_LUGAR . '(' expr ',' expr ')'

    '('  desplazar e ir al estado 25


State 14

    2 list: list stmt . ';'

    ';'  desplazar e ir al estado 26


State 15

    5 stmt: asgn .

    $default  reduce usando la regla 5 (stmt)


State 16

   13 stmt: mientras . cond HACER stmtlist FIN_MIENTRAS end

    '('  desplazar e ir al estado 27

    cond  ir al estado 28


State 17

   14 stmt: si . cond ENTONCES stmtlist FIN_SI end
   15     | si . cond ENTONCES stmtlist end SI_NO stmtlist FIN_SI end

    '('  desplazar e ir al estado 27

    cond  ir al estado 29


State 18

    3 list: list error ';' .

    $default  reduce usando la regla 3 (list)


State 19

   16 asgn: VAR ASIGNACION . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 42


State 20

   17 asgn: CONSTANTE ASIGNACION . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 43


State 21

    8 stmt: ESCRIBIR '(' . expr ')'

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 44


State 22

   10 stmt: ESCRIBIR_CADENA '(' . CADENA ')'
   11     | ESCRIBIR_CADENA '(' . expr ')'

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 45
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 46


State 23

    9 stmt: LEER '(' . VAR ')'

    VAR  desplazar e ir al estado 47


State 24

   12 stmt: LEER_CADENA '(' . VAR ')'

    VAR  desplazar e ir al estado 48


State 25

    7 stmt: TOKEN_LUGAR '(' . expr ',' expr ')'

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 49


State 26

    2 list: list stmt ';' .

    $default  reduce usando la regla 2 (list)


State 27

   18 cond: '(' . expr ')'

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 50


State 28

   13 stmt: mientras cond . HACER stmtlist FIN_MIENTRAS end

    HACER  desplazar e ir al estado 51


State 29

   14 stmt: si cond . ENTONCES stmtlist FIN_SI end
   15     | si cond . ENTONCES stmtlist end SI_NO stmtlist FIN_SI end

    ENTONCES  desplazar e ir al estado 52


State 30

   24 expr: NUMBER .

    $default  reduce usando la regla 24 (expr)


State 31

   16 asgn: VAR . ASIGNACION expr
   26 expr: VAR .

    ASIGNACION  desplazar e ir al estado 19

    $default  reduce usando la regla 26 (expr)


State 32

   17 asgn: CONSTANTE . ASIGNACION expr
   27 expr: CONSTANTE .

    ASIGNACION  desplazar e ir al estado 20

    $default  reduce usando la regla 27 (expr)


State 33

   25 expr: CADENA .

    $default  reduce usando la regla 25 (expr)


State 34

   29 expr: FUNCION0_PREDEFINIDA . '(' ')'

    '('  desplazar e ir al estado 53


State 35

   30 expr: FUNCION1_PREDEFINIDA . '(' expr ')'

    '('  desplazar e ir al estado 54


State 36

   31 expr: FUNCION2_PREDEFINIDA . '(' expr ',' expr ')'

    '('  desplazar e ir al estado 55


State 37

   48 expr: NO_LOGICO . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 56


State 38

   32 expr: '(' . expr ')'

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 57


State 39

   33 expr: '-' . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 58


State 40

   34 expr: '+' . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 59


State 41

   28 expr: asgn .

    $default  reduce usando la regla 28 (expr)


State 42

   16 asgn: VAR ASIGNACION expr .
   35 expr: expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    O_LOGICO     desplazar e ir al estado 60
    Y_LOGICO     desplazar e ir al estado 61
    MAYOR_QUE    desplazar e ir al estado 62
    MENOR_QUE    desplazar e ir al estado 63
    MENOR_IGUAL  desplazar e ir al estado 64
    MAYOR_IGUAL  desplazar e ir al estado 65
    DISTINTO     desplazar e ir al estado 66
    IGUAL        desplazar e ir al estado 67
    SUMA         desplazar e ir al estado 68
    RESTA        desplazar e ir al estado 69
    PROD         desplazar e ir al estado 70
    DIV          desplazar e ir al estado 71
    DIV_INT      desplazar e ir al estado 72
    MOD          desplazar e ir al estado 73
    POT          desplazar e ir al estado 74
    CONCAT       desplazar e ir al estado 75

    $default  reduce usando la regla 16 (asgn)


State 43

   17 asgn: CONSTANTE ASIGNACION expr .
   35 expr: expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    O_LOGICO     desplazar e ir al estado 60
    Y_LOGICO     desplazar e ir al estado 61
    MAYOR_QUE    desplazar e ir al estado 62
    MENOR_QUE    desplazar e ir al estado 63
    MENOR_IGUAL  desplazar e ir al estado 64
    MAYOR_IGUAL  desplazar e ir al estado 65
    DISTINTO     desplazar e ir al estado 66
    IGUAL        desplazar e ir al estado 67
    SUMA         desplazar e ir al estado 68
    RESTA        desplazar e ir al estado 69
    PROD         desplazar e ir al estado 70
    DIV          desplazar e ir al estado 71
    DIV_INT      desplazar e ir al estado 72
    MOD          desplazar e ir al estado 73
    POT          desplazar e ir al estado 74
    CONCAT       desplazar e ir al estado 75

    $default  reduce usando la regla 17 (asgn)


State 44

    8 stmt: ESCRIBIR '(' expr . ')'
   35 expr: expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    O_LOGICO     desplazar e ir al estado 60
    Y_LOGICO     desplazar e ir al estado 61
    MAYOR_QUE    desplazar e ir al estado 62
    MENOR_QUE    desplazar e ir al estado 63
    MENOR_IGUAL  desplazar e ir al estado 64
    MAYOR_IGUAL  desplazar e ir al estado 65
    DISTINTO     desplazar e ir al estado 66
    IGUAL        desplazar e ir al estado 67
    SUMA         desplazar e ir al estado 68
    RESTA        desplazar e ir al estado 69
    PROD         desplazar e ir al estado 70
    DIV          desplazar e ir al estado 71
    DIV_INT      desplazar e ir al estado 72
    MOD          desplazar e ir al estado 73
    POT          desplazar e ir al estado 74
    CONCAT       desplazar e ir al estado 75
    ')'          desplazar e ir al estado 76


State 45

   10 stmt: ESCRIBIR_CADENA '(' CADENA . ')'
   25 expr: CADENA .

    ')'  desplazar e ir al estado 77

    ')'       [reduce usando la regla 25 (expr)]
    $default  reduce usando la regla 25 (expr)


State 46

   11 stmt: ESCRIBIR_CADENA '(' expr . ')'
   35 expr: expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    O_LOGICO     desplazar e ir al estado 60
    Y_LOGICO     desplazar e ir al estado 61
    MAYOR_QUE    desplazar e ir al estado 62
    MENOR_QUE    desplazar e ir al estado 63
    MENOR_IGUAL  desplazar e ir al estado 64
    MAYOR_IGUAL  desplazar e ir al estado 65
    DISTINTO     desplazar e ir al estado 66
    IGUAL        desplazar e ir al estado 67
    SUMA         desplazar e ir al estado 68
    RESTA        desplazar e ir al estado 69
    PROD         desplazar e ir al estado 70
    DIV          desplazar e ir al estado 71
    DIV_INT      desplazar e ir al estado 72
    MOD          desplazar e ir al estado 73
    POT          desplazar e ir al estado 74
    CONCAT       desplazar e ir al estado 75
    ')'          desplazar e ir al estado 78


State 47

    9 stmt: LEER '(' VAR . ')'

    ')'  desplazar e ir al estado 79


State 48

   12 stmt: LEER_CADENA '(' VAR . ')'

    ')'  desplazar e ir al estado 80


State 49

    7 stmt: TOKEN_LUGAR '(' expr . ',' expr ')'
   35 expr: expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    O_LOGICO     desplazar e ir al estado 60
    Y_LOGICO     desplazar e ir al estado 61
    MAYOR_QUE    desplazar e ir al estado 62
    MENOR_QUE    desplazar e ir al estado 63
    MENOR_IGUAL  desplazar e ir al estado 64
    MAYOR_IGUAL  desplazar e ir al estado 65
    DISTINTO     desplazar e ir al estado 66
    IGUAL        desplazar e ir al estado 67
    SUMA         desplazar e ir al estado 68
    RESTA        desplazar e ir al estado 69
    PROD         desplazar e ir al estado 70
    DIV          desplazar e ir al estado 71
    DIV_INT      desplazar e ir al estado 72
    MOD          desplazar e ir al estado 73
    POT          desplazar e ir al estado 74
    CONCAT       desplazar e ir al estado 75
    ','          desplazar e ir al estado 81


State 50

   18 cond: '(' expr . ')'
   35 expr: expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    O_LOGICO     desplazar e ir al estado 60
    Y_LOGICO     desplazar e ir al estado 61
    MAYOR_QUE    desplazar e ir al estado 62
    MENOR_QUE    desplazar e ir al estado 63
    MENOR_IGUAL  desplazar e ir al estado 64
    MAYOR_IGUAL  desplazar e ir al estado 65
    DISTINTO     desplazar e ir al estado 66
    IGUAL        desplazar e ir al estado 67
    SUMA         desplazar e ir al estado 68
    RESTA        desplazar e ir al estado 69
    PROD         desplazar e ir al estado 70
    DIV          desplazar e ir al estado 71
    DIV_INT      desplazar e ir al estado 72
    MOD          desplazar e ir al estado 73
    POT          desplazar e ir al estado 74
    CONCAT       desplazar e ir al estado 75
    ')'          desplazar e ir al estado 82


State 51

   13 stmt: mientras cond HACER . stmtlist FIN_MIENTRAS end

    $default  reduce usando la regla 22 (stmtlist)

    stmtlist  ir al estado 83


State 52

   14 stmt: si cond ENTONCES . stmtlist FIN_SI end
   15     | si cond ENTONCES . stmtlist end SI_NO stmtlist FIN_SI end

    $default  reduce usando la regla 22 (stmtlist)

    stmtlist  ir al estado 84


State 53

   29 expr: FUNCION0_PREDEFINIDA '(' . ')'

    ')'  desplazar e ir al estado 85


State 54

   30 expr: FUNCION1_PREDEFINIDA '(' . expr ')'

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 86


State 55

   31 expr: FUNCION2_PREDEFINIDA '(' . expr ',' expr ')'

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 87


State 56

   35 expr: expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   48     | NO_LOGICO expr .
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    POT     desplazar e ir al estado 74
    CONCAT  desplazar e ir al estado 75

    $default  reduce usando la regla 48 (expr)


State 57

   32 expr: '(' expr . ')'
   35     | expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    O_LOGICO     desplazar e ir al estado 60
    Y_LOGICO     desplazar e ir al estado 61
    MAYOR_QUE    desplazar e ir al estado 62
    MENOR_QUE    desplazar e ir al estado 63
    MENOR_IGUAL  desplazar e ir al estado 64
    MAYOR_IGUAL  desplazar e ir al estado 65
    DISTINTO     desplazar e ir al estado 66
    IGUAL        desplazar e ir al estado 67
    SUMA         desplazar e ir al estado 68
    RESTA        desplazar e ir al estado 69
    PROD         desplazar e ir al estado 70
    DIV          desplazar e ir al estado 71
    DIV_INT      desplazar e ir al estado 72
    MOD          desplazar e ir al estado 73
    POT          desplazar e ir al estado 74
    CONCAT       desplazar e ir al estado 75
    ')'          desplazar e ir al estado 88


State 58

   33 expr: '-' expr .
   35     | expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    POT     desplazar e ir al estado 74
    CONCAT  desplazar e ir al estado 75

    $default  reduce usando la regla 33 (expr)


State 59

   34 expr: '+' expr .
   35     | expr . SUMA expr
   36     | expr . RESTA expr
   37     | expr . PROD expr
   38     | expr . DIV expr
   39     | expr . DIV_INT expr
   40     | expr . MOD expr
   41     | expr . POT expr
   42     | expr . MAYOR_QUE expr
   43     | expr . MAYOR_IGUAL expr
   44     | expr . MENOR_QUE expr
   45     | expr . MENOR_IGUAL expr
   46     | expr . IGUAL expr
   47     | expr . DISTINTO expr
   49     | expr . Y_LOGICO expr
   50     | expr . O_LOGICO expr
   51     | expr . CONCAT expr

    POT     desplazar e ir al estado 74
    CONCAT  desplazar e ir al estado 75

    $default  reduce usando la regla 34 (expr)


State 60

   50 expr: expr O_LOGICO . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 89


State 61

   49 expr: expr Y_LOGICO . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 90


State 62

   42 expr: expr MAYOR_QUE . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 91


State 63

   44 expr: expr MENOR_QUE . expr

    NUMBER                desplazar e ir al estado 30
    VAR                   desplazar e ir al estado 31
    CONSTANTE             desplazar e ir al estado 32
    CADENA                desplazar e ir al estado 33
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 34
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 35
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 36
    NO_LOGICO             desplazar e ir al estado 37
    '('                   desplazar e ir al estado 38
    '-'                   desplazar e ir al estado 39
    '+'                   desplazar e ir al estado 40

    asgn  ir al estado 41
    expr  ir al estado 92


State 64

   45 expr: expr MENOR_IGUAL . expr
